crates/rationes/tests/snapshots/contract__verb_add_balance_fresh.snap
---
source: crates/rationes/tests/contract.rs
assertion_line: 183
expression: pretty(&fresh)
---
{
  "core": "rationes",
  "data": {
    "amount": 4200.0
  },
  "home": "crp",
  "key": "20260718",
  "kind": "balance",
  "refs": [],
  "series": "checking"
}
