crates/rationes/tests/snapshots/contract__verb_add_balance_next_key.snap
---
source: crates/rationes/tests/contract.rs
assertion_line: 199
expression: pretty(&next)
---
{
  "core": "rationes",
  "data": {
    "amount": 4310.0
  },
  "home": "crp",
  "key": "20260719",
  "kind": "balance",
  "refs": [],
  "series": "checking"
}
