crates/rationes/tests/snapshots/contract__verb_add_holding_fresh.snap
---
source: crates/rationes/tests/contract.rs
assertion_line: 157
expression: pretty(&fresh)
---
{
  "core": "rationes",
  "data": {
    "currency": "usd"
  },
  "home": "crp",
  "kind": "account",
  "refs": [],
  "slug": "checking"
}
