crates/rationes/tests/snapshots/contract__verb_add_holding_overwrite_applied.snap
---
source: crates/rationes/tests/contract.rs
assertion_line: 170
expression: pretty(&applied)
---
{
  "core": "rationes",
  "data": {
    "note": "day to day"
  },
  "home": "crp",
  "kind": "account",
  "refs": [],
  "slug": "checking"
}
