crates/rationes/tests/snapshots/contract__verb_add_holding_overwrite_pending.snap
---
source: crates/rationes/tests/contract.rs
assertion_line: 163
expression: pretty(&redact(pending))
---
{
  "change": {
    "after": {
      "core": "rationes",
      "data": {
        "note": "day to day"
      },
      "home": "crp",
      "kind": "account",
      "refs": [],
      "slug": "checking"
    },
    "before": {
      "core": "rationes",
      "data": {
        "currency": "usd"
      },
      "home": "crp",
      "kind": "account",
      "refs": [],
      "slug": "checking"
    },
    "core": "rationes",
    "home": "crp",
    "key": "checking",
    "kind": "account",
    "verb": "add"
  },
  "plan": "add",
  "token": "[redacted]"
}
