crates/rationes/tests/snapshots/contract__verb_edit_kind.snap
---
source: crates/rationes/tests/contract.rs
assertion_line: 242
expression: pretty(&edited)
---
{
  "core": "rationes",
  "data": {},
  "home": "crb",
  "kind": "asset",
  "refs": [],
  "slug": "bicycle"
}
